--- a/locales/uk.json
+++ b/locales/uk.json
@@ -28,7 +28,7 @@
   "withdraw_crypto": "Криптовалюта",
   "withdraw_card": "Банківська картка",
   "withdraw_other": "Інше",
-  "withdraw_details": "Введіть реквізити (наприклад: мережа+адреса USDT або номер картки):",
+  "withdraw_details": "Введіть реквізити (наприклад: мережа+адреса USDT або номер картки або -):",
   "withdraw_amount": "Вкажіть суму QC (або 0 — весь доступний баланс):",
   "withdraw_confirm": "Підтвердити заявку на {qc} QC?\nКраїна: {country}\nСпосіб: {method}\nРеквізити: {details}",
   "withdraw_saved": "Заявку створено! Адмін перевірить і зв’яжеться.",
