--- a/locales/uk.json
+++ b/locales/uk.json
@@ -70,5 +70,9 @@
   "open_chat": "Написати користувачу",
   "paid_ok": "Виплачено і QC списано.",
   "processed_ok": "Позначено як оброблено.",
-  "help": "Це бот із мікрозавданнями. Активуйте доступ за $1, виконуйте кроки й отримуйте QC."
+  "help": "Це бот із мікрозавданнями. Активуйте доступ за $1, виконуйте кроки й отримуйте QC.",
+  "pay_stars": "Оплатити ⭐️ Stars",
+  "pay_crypto": "Оплатити криптою (CryptoCloud)",
+  "i_paid": "Я оплатив(ла)",
+  "activated": "✅ Доступ активовано!"
 }
