--- a/locales/ru.json
+++ b/locales/ru.json
@@ -70,5 +70,9 @@
   "open_chat": "Написать пользователю",
   "paid_ok": "Выплачено и QC списано.",
   "processed_ok": "Отмечено как обработано.",
-  "help": "Это бот с микро-заданиями. Активируйте доступ за $1, выполняйте шаги и получайте QC."
+  "help": "Это бот с микро-заданиями. Активируйте доступ за $1, выполняйте шаги и получайте QC.",
+  "pay_stars": "Оплатить ⭐️ Stars",
+  "pay_crypto": "Оплатить криптой (CryptoCloud)",
+  "i_paid": "Я оплатил(а)",
+  "activated": "✅ Доступ активировано!"
 }
