--- a/locales/uk.json
+++ b/locales/uk.json
@@ -1,7 +1,7 @@
 {
   "lang_prompt": "Оберіть мову:",
-  "activate_title": "Активація доступу",
-  "activate_text": "Доступ до завдань відкривається після одноразової оплати $1.",
+  "activate_title": "✨ Вітаємо у світі QuestWorld! 🌍",
+  "activate_text": "Тут кожне завдання — крок у новий вимір.\nКожна перемога — це монета твого майбутнього. 💫\n🔓 Розблокуй усі світи й почни пригоду просто зараз!\nЛише за $1 ти відкриєш шлях до свого нового майбутнього.\n🔥 Готовий зробити вибір? 👇",
   "pay_btn": "Оплатити $1",
   "i_paid_btn": "Я оплатив(ла)",
   "not_confirmed": "Платіж ще не підтверджено. Спробуйте пізніше.",
