--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,7 +1,7 @@
 {
   "lang_prompt": "Выберите язык:",
-  "activate_title": "Активация доступа",
-  "activate_text": "Доступ к заданиям открывается после одноразовой оплаты $1.",
+  "activate_title": "✨ Добро пожаловать в мир QuestWorld! 🌍",
+  "activate_text": "Здесь каждое задание — шаг в новое измерение.\nКаждая победа — это монета твоего будущего. 💫\n🔓 Разблокируй все миры и начни приключение прямо сейчас!\nВсего за $1 ты откроешь путь к своему новому будущему.\n🔥 Готов сделать выбор? 👇",
   "pay_btn": "Оплатить $1",
   "i_paid_btn": "Я оплатил(а)",
   "not_confirmed": "Платеж ещё не подтверждён. Попробуйте позже.",
